编译问题处理